--- a/WebApp/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/WebApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Ci and Cd for docker</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Docker</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
